Add monospace fonts from Google Fonts and linked in the html head

--- a/index.html
+++ b/index.html
@@ -6,17 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="icon" href="images/favicon.ico" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Red+Hat+Mono:ital@1&family=Share+Tech+Mono&family=Ubuntu+Mono:ital@1&display=swap"
+      rel="stylesheet"
+    />
     <title>Emilio Pino CV</title>
   </head>
   <body>
     <div class="top-container">
-      <img src="images/cloud.png" alt="cloud image" />
+      <img src="images/cloud.png" id="top-cloud" alt="cloud image" />
       <h1>I'm Emilio.</h1>
       <p>
         A Safety, Health and Environment Specialist converted into a
         <span id="pro">pro</span>grammer.
       </p>
-      <img src="images/cloud.png" alt="cloud image" />
+      <img src="images/cloud.png" id="bottom-cloud" alt="cloud image" />
       <img src="images/mountain.png" alt="mountain image" />
     </div>
 
