Style basic html structure

--- a/index.html
+++ b/index.html
@@ -18,28 +18,30 @@
     <div class="top-container">
       <img src="images/cloud.png" id="top-cloud" alt="cloud image" />
       <h1>I'm Emilio.</h1>
-      <p>
-        A Safety, Health and Environment Specialist converted into a
+      <h2>
+        A Health, Safety and Environment Specialist converted into a
         <span id="pro">pro</span>grammer.
-      </p>
+      </h2>
       <img src="images/cloud.png" id="bottom-cloud" alt="cloud image" />
       <img src="images/mountain.png" alt="mountain image" />
     </div>
 
     <div class="middle-container">
       <div class="profile">
-        <img src="" alt="" />
+        <img src="images/angela.png" alt="profile picture" />
         <h2>Hello.</h2>
-        <p>
+        <p id="bio">
           Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna.
-          Non auctor, montes nulla distinctio.
+          Non auctor, montes nulla distinctio. Lorem ipsum dolor sit amet, vitae
+          volutpat, dui conubia, dolor urna. Non auctor, montes nulla
+          distinctio.
         </p>
       </div>
       <hr />
       <div class="skills">
         <h2>My Skills.</h2>
         <div class="skill-row">
-          <img class="" src="" alt="" />
+          <img class="" src="images/chillies.png" alt="" />
           <h3>Lorem & Ipsum</h3>
           <p>
             Lorem ipsum dolor sit amet, quis in duis, iaculis id felis.
@@ -48,7 +50,7 @@
           </p>
         </div>
         <div class="skill-row">
-          <img class="" src="" alt="" />
+          <img class="" src="images/computer.png" alt="" />
           <h3>Lorem Ipsum Dolor</h3>
           <p>
             Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu,
@@ -61,11 +63,13 @@
       <div class="contact-me">
         <h2>Get In Touch</h2>
         <h3>Lorem ipsum dolor sit amet, non elit.</h3>
-        <p>
+        <p id="contact-message">
           Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales,
-          tellus donec dui, ornare erat.
+          tellus donec dui, ornare erat. Lorem ipsum dolor sit amet, in quis,
+          aenean amet. Phasellus sodales, tellus donec dui, ornare erat.
         </p>
-        <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+
+        <a id="btn" href="mailto:pinoen@yahoo.com.ar">CONTACT ME</a>
       </div>
     </div>
 
@@ -73,7 +77,7 @@
       <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
       <a class="footer-link" href="https://twitter.com/">Twitter</a>
       <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
-      <p>© Name Surname.</p>
+      <p>© Emilio Pino.</p>
     </div>
   </body>
 </html>
