Add bio and work experience with links to companies

--- a/index.html
+++ b/index.html
@@ -30,36 +30,173 @@
       <div class="profile">
         <img src="images/angela.png" alt="profile picture" />
         <h2>Hello.</h2>
-        <p id="bio">
-          Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna.
-          Non auctor, montes nulla distinctio. Lorem ipsum dolor sit amet, vitae
-          volutpat, dui conubia, dolor urna. Non auctor, montes nulla
-          distinctio.
+        <p class="bio">
+          Since 2005 I have been working as a Safety Supervisor in the Energy,
+          Oil and Gas industries where I got experience and knowlegde applying
+          international safety and quality standarts and in working with
+          different groups of people always with the main goal of protect and
+          empower workers, those who are the fundamental asset of any
+          organization.
+        </p>
+        <p class="bio">
+          Since I was a child I got an special interest for computers and
+          technology in general, however I have not had the opportunitty to
+          study and make a living from that. Now I got that opportunitty and I
+          am confident enough to excel in this field. I consider myself a
+          long-term student, fast learner, goal oriented in results, quickly
+          adaptable in changing environments, responsable and friendly.
         </p>
       </div>
       <hr />
       <div class="skills">
-        <h2>My Skills.</h2>
+        <h2>My formal education.</h2>
         <div class="skill-row">
-          <img class="" src="images/chillies.png" alt="" />
-          <h3>Lorem & Ipsum</h3>
+          <a href="https://www.uda.edu.ar/index.php" target="_blank"
+            ><img class="logo" src="images/delAconcagua.png" />University of
+            Aconcagua</a
+          >
+
+          <h3>Degree in Occupational Health and Safety</h3>
+
           <p>
-            Lorem ipsum dolor sit amet, quis in duis, iaculis id felis.
-            Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit
-            nam, lectus ante, ut lorem eros.
+            <img class="icon" src="images/calendar-solid.svg" />Mar 2003 - Sep
+            2010
+          </p>
+          <p>
+            <img class="icon" src="images/location-dot-solid.svg" />Mendoza,
+            Argentina
           </p>
         </div>
         <div class="skill-row">
           <img class="" src="images/computer.png" alt="" />
-          <h3>Lorem Ipsum Dolor</h3>
+          <h3>Technical Master Builder</h3>
+          <p>Provincial School of Technical Education</p>
           <p>
-            Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu,
-            bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel
-            eu, rutrum nam.
+            <img class="icon" src="images/calendar-solid.svg" />Mar 1995 - Sep
+            2000
+          </p>
+          <p>
+            <img class="icon" src="images/location-dot-solid.svg" />Neuquen,
+            Argentina
           </p>
         </div>
       </div>
       <hr />
+
+      <div class="skills">
+        <h2>My work experience.</h2>
+        <div class="skill-row">
+          <a href="https://www.halliburton.com/" target="_blank"
+            ><img class="oil" src="images/halliburton-logo.svg" />Halliburton</a
+          >
+
+          <h3>HSE Technical Professional</h3>
+          <p>
+            <img class="icon" src="images/calendar-solid.svg" />Oct 2019 - Oct
+            2020
+          </p>
+          <p>
+            <img class="icon" src="images/location-dot-solid.svg" />Neuquen,
+            Argentina
+          </p>
+        </div>
+        <div class="skill-row">
+          <a href="https://www.technipfmc.com/" target="_blank"
+            ><img class="oil" src="images/fmc.svg" />TechnipFMC</a
+          >
+
+          <h3>HSE and Security Coordinator</h3>
+          <p>
+            <img class="icon" src="images/calendar-solid.svg" />Jul 2017 - Oct
+            2019
+          </p>
+          <p>
+            <img class="icon" src="images/location-dot-solid.svg" />Neuquen,
+            Argentina
+          </p>
+        </div>
+        <div class="skill-row">
+          <a href="https://tecna.business.site/" target="_blank"
+            ><img class="logo" src="images/tecna.png" />Tecna</a
+          >
+          <h3>Safety Coordinator</h3>
+
+          <p>
+            <img class="icon" src="images/calendar-solid.svg" />Oct 2013 - Jul
+            2017
+          </p>
+          <p>
+            <img class="icon" src="images/location-dot-solid.svg" />Tierra del
+            Fuego - Buenos Aires - Neuquen, Argentina
+          </p>
+        </div>
+        <div class="skill-row">
+          <a href="https://www.andradegutierrez.com.br/" target="_blank"
+            ><img class="logo" src="images/ag.svg" />Andrade Gutierrez</a
+          >
+
+          <h3>Safery Coordinator</h3>
+
+          <p>
+            <img class="icon" src="images/calendar-solid.svg" />May 2011 - Mar
+            2012
+          </p>
+          <p>
+            <img class="icon" src="images/location-dot-solid.svg" />Buenos
+            Aires, Argentina
+          </p>
+        </div>
+        <div class="skill-row">
+          <a href="https://www.championx.com/" target="_blank"
+            ><img class="logo" src="images/champion.png" />Champion
+            Technologies</a
+          >
+
+          <h3>QHSE Analyst</h3>
+
+          <p>
+            <img class="icon" src="images/calendar-solid.svg" />Jan 2008 - Feb
+            2011
+          </p>
+          <p>
+            <img class="icon" src="images/location-dot-solid.svg" />Neuquen -
+            Chubut, Argentina
+          </p>
+        </div>
+        <div class="skill-row">
+          <a href="https://www.skanska.com/" target="_blank"
+            ><img class="logo" src="images/skanska.svg" />Skanska</a
+          >
+
+          <h3>Safery Supervisor</h3>
+          <p>
+            <img class="icon" src="images/calendar-solid.svg" />Oct 2005 - May
+            2007
+          </p>
+          <p>
+            <img class="icon" src="images/location-dot-solid.svg" />Neuquen -
+            Rio Negro - La Pampa, Argentina
+          </p>
+        </div>
+        <h2>Main tasks and responsabilities from these jobs.</h2>
+        <div class="skill-row">
+          <ul>
+            <li>
+              Audit, control and maintenance of Management Systems based on ISO
+              standarts.
+            </li>
+            <li>Coordination of HSE teams.</li>
+            <li>Training in HSE topics.</li>
+            <li>HSE inspections in offices, shops, fields, building sites.</li>
+            <li>Control and follow up of performance key indicators.</li>
+            <li>Revision and management of Risk Analysis.</li>
+            <li>Preparation of Safety Programs and legal aspects.</li>
+            <li>Preparation of Safety Campaigns and Safety Reports.</li>
+          </ul>
+        </div>
+      </div>
+      <hr />
+
       <div class="contact-me">
         <h2>Get In Touch</h2>
         <h3>Lorem ipsum dolor sit amet, non elit.</h3>
@@ -74,9 +211,21 @@
     </div>
 
     <div class="bottom-container">
-      <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
-      <a class="footer-link" href="https://twitter.com/">Twitter</a>
-      <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+      <a
+        class="footer-link"
+        href="https://ar.linkedin.com/in/emiliopino"
+        target="_blank"
+        >LinkedIn</a
+      >
+      <a
+        class="footer-link"
+        href="https://twitter.com/EmilioPino5"
+        target="_blank"
+        >Twitter</a
+      >
+      <a class="footer-link" href="https://github.com/pinoen" target="_blank"
+        >GitHub</a
+      >
       <p>© Emilio Pino.</p>
     </div>
   </body>
