--- a/index.html
+++ b/index.html
@@ -15,6 +15,16 @@
     <title>Emilio Pino CV</title>
   </head>
   <body>
+    <nav class="nav-bar">
+      <div class="cv">CURRICULUM VITAE</div>
+      <ul class="nav">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">As a HSE</a></li>
+        <li><a href="#">As a developer</a></li>
+        <li><a href="#">As a human</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </nav>
     <div class="top-container">
       <img src="images/cloud.png" id="top-cloud" alt="cloud image" />
       <h1>I'm Emilio.</h1>
@@ -135,7 +145,7 @@
             ><img class="logo" src="images/ag.svg" />Andrade Gutierrez</a
           >
 
-          <h3>Safery Coordinator</h3>
+          <h3>Safety Coordinator</h3>
 
           <p>
             <img class="icon" src="images/calendar-solid.svg" />May 2011 - Mar
@@ -148,7 +158,7 @@
         </div>
         <div class="skill-row">
           <a href="https://www.championx.com/" target="_blank"
-            ><img class="logo" src="images/champion.png" />Champion
+            ><img class="oil" src="images/champion.png" />Champion
             Technologies</a
           >
 
