--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     <nav class="nav-bar">
       <div class="cv">CURRICULUM VITAE</div>
       <ul class="nav">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">As a HSE</a></li>
-        <li><a href="#">As a developer</a></li>
-        <li><a href="#">As a human</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="hse.html">As a safety professional</a></li>
+        <li><a href="developer.html">As a developer</a></li>
+        <li><a href="human.html">As a human</a></li>
+        <li><a href="#contact-me">Contact</a></li>
       </ul>
     </nav>
     <div class="top-container">
@@ -93,121 +93,7 @@
       </div>
       <hr />
 
-      <div class="skills">
-        <h2>My work experience.</h2>
-        <div class="skill-row">
-          <a href="https://www.halliburton.com/" target="_blank"
-            ><img class="oil" src="images/halliburton-logo.svg" />Halliburton</a
-          >
-
-          <h3>HSE Technical Professional</h3>
-          <p>
-            <img class="icon" src="images/calendar-solid.svg" />Oct 2019 - Oct
-            2020
-          </p>
-          <p>
-            <img class="icon" src="images/location-dot-solid.svg" />Neuquen,
-            Argentina
-          </p>
-        </div>
-        <div class="skill-row">
-          <a href="https://www.technipfmc.com/" target="_blank"
-            ><img class="oil" src="images/fmc.svg" />TechnipFMC</a
-          >
-
-          <h3>HSE and Security Coordinator</h3>
-          <p>
-            <img class="icon" src="images/calendar-solid.svg" />Jul 2017 - Oct
-            2019
-          </p>
-          <p>
-            <img class="icon" src="images/location-dot-solid.svg" />Neuquen,
-            Argentina
-          </p>
-        </div>
-        <div class="skill-row">
-          <a href="https://tecna.business.site/" target="_blank"
-            ><img class="logo" src="images/tecna.png" />Tecna</a
-          >
-          <h3>Safety Coordinator</h3>
-
-          <p>
-            <img class="icon" src="images/calendar-solid.svg" />Oct 2013 - Jul
-            2017
-          </p>
-          <p>
-            <img class="icon" src="images/location-dot-solid.svg" />Tierra del
-            Fuego - Buenos Aires - Neuquen, Argentina
-          </p>
-        </div>
-        <div class="skill-row">
-          <a href="https://www.andradegutierrez.com.br/" target="_blank"
-            ><img class="logo" src="images/ag.svg" />Andrade Gutierrez</a
-          >
-
-          <h3>Safety Coordinator</h3>
-
-          <p>
-            <img class="icon" src="images/calendar-solid.svg" />May 2011 - Mar
-            2012
-          </p>
-          <p>
-            <img class="icon" src="images/location-dot-solid.svg" />Buenos
-            Aires, Argentina
-          </p>
-        </div>
-        <div class="skill-row">
-          <a href="https://www.championx.com/" target="_blank"
-            ><img class="oil" src="images/champion.png" />Champion
-            Technologies</a
-          >
-
-          <h3>QHSE Analyst</h3>
-
-          <p>
-            <img class="icon" src="images/calendar-solid.svg" />Jan 2008 - Feb
-            2011
-          </p>
-          <p>
-            <img class="icon" src="images/location-dot-solid.svg" />Neuquen -
-            Chubut, Argentina
-          </p>
-        </div>
-        <div class="skill-row">
-          <a href="https://www.skanska.com/" target="_blank"
-            ><img class="logo" src="images/skanska.svg" />Skanska</a
-          >
-
-          <h3>Safery Supervisor</h3>
-          <p>
-            <img class="icon" src="images/calendar-solid.svg" />Oct 2005 - May
-            2007
-          </p>
-          <p>
-            <img class="icon" src="images/location-dot-solid.svg" />Neuquen -
-            Rio Negro - La Pampa, Argentina
-          </p>
-        </div>
-        <h2>Main tasks and responsabilities from these jobs.</h2>
-        <div class="skill-row">
-          <ul>
-            <li>
-              Audit, control and maintenance of Management Systems based on ISO
-              standarts.
-            </li>
-            <li>Coordination of HSE teams.</li>
-            <li>Training in HSE topics.</li>
-            <li>HSE inspections in offices, shops, fields, building sites.</li>
-            <li>Control and follow up of performance key indicators.</li>
-            <li>Revision and management of Risk Analysis.</li>
-            <li>Preparation of Safety Programs and legal aspects.</li>
-            <li>Preparation of Safety Campaigns and Safety Reports.</li>
-          </ul>
-        </div>
-      </div>
-      <hr />
-
-      <div class="contact-me">
+      <div id="contact-me">
         <h2>Get In Touch</h2>
         <h3>Lorem ipsum dolor sit amet, non elit.</h3>
         <p id="contact-message">
