Add background images and refactor content of the hse.html

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="hse.html">As a safety professional</a></li>
         <li><a href="developer.html">As a developer</a></li>
-        <li><a href="human.html">As a human</a></li>
+        <li><a href="human.html">As a human being</a></li>
         <li><a href="#contact-me">Contact</a></li>
       </ul>
     </nav>
