--- a/hse.html
+++ b/hse.html
@@ -21,19 +21,19 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="hse.html">As a safety professional</a></li>
         <li><a href="developer.html">As a developer</a></li>
-        <li><a href="human.html">As a human</a></li>
+        <li><a href="human.html">As a human being</a></li>
         <li><a href="#contact-me">Contact</a></li>
       </ul>
     </nav>
     <div class="top-container">
-      <img src="images/cloud.png" id="top-cloud" alt="cloud image" />
-      <h1>I'm Emilio.</h1>
+      <img src="images/cono.png" id="top-cono" alt="cono image" />
+      <h1>I'm Emilio,</h1>
       <h2>
-        A Health, Safety and Environment Specialist converted into a
-        <span id="pro">pro</span>grammer.
+        and this is what I have done as a
+        <span id="pro">safety</span> guy.
       </h2>
-      <img src="images/cloud.png" id="bottom-cloud" alt="cloud image" />
-      <img src="images/mountain.png" alt="mountain image" />
+      <img src="images/cono.png" id="bottom-cono" alt="cono image" />
+      <img src="images/safety-first.svg" id="safety-first" alt="safety sign" />
     </div>
 
     <div class="middle-container">
@@ -43,9 +43,9 @@
         <p class="bio">
           I got my first job as a safety professional back in 2005, it was a
           role as a technician in a small building site for an small company.
-          After that I entered in corporations in construction industry working
-          for the energy industry in projects such as gas and oil facilities,
-          oil and gas treatment, refinaries, ports, etc. At first my
+          After that I entered in corporations in the construction industry
+          working for the energy industry in projects such as gas and oil
+          facilities, oil and gas treatment, refinaries, ports, etc. At first my
           responsabilities were mainly the supervision on site of any kind of
           tasks that can be encountered in a building location: excavations,
           lifting of heavy equipment, welding and grinding, works at height,
@@ -56,8 +56,8 @@
           As a got more experience I had some other roles related with the
           administration of Management Systems based on ISO standarts which
           imply taks like audits, programs to be follow, training, meet legal
-          requerements, clients satisfaction and all sort of metric in order to
-          make sure we we doing well in accordance with predefined goals.
+          requerements, clients satisfaction and all sort of metrics in order to
+          make sure we were doing well in accordance with predefined goals.
         </p>
       </div>
       <hr />
@@ -65,20 +65,66 @@
       <div class="skills">
         <h2>My work experience.</h2>
         <div class="skill-row">
-          <a href="https://www.halliburton.com/" target="_blank"
-            ><img class="oil" src="images/halliburton-logo.svg" />Halliburton</a
+          <a href="https://www.skanska.com/" target="_blank"
+            ><img class="logo" src="images/skanska.svg" />Skanska</a
           >
-
-          <h3>HSE Technical Professional</h3>
+          <h3>Safety Supervisor</h3>
           <p>
-            <img class="icon" src="images/calendar-solid.svg" />Oct 2019 - Oct
-            2020
+            <img class="icon" src="images/calendar-solid.svg" />Oct 2005 - May
+            2007
           </p>
           <p>
-            <img class="icon" src="images/location-dot-solid.svg" />Neuquen,
-            Argentina
+            <img class="icon" src="images/location-dot-solid.svg" />Neuquen -
+            Rio Negro - La Pampa, Argentina
           </p>
         </div>
+
+        <div class="skill-row">
+          <a href="https://www.championx.com/" target="_blank"
+            ><img class="oil" src="images/champion.png" />Champion
+            Technologies</a
+          >
+          <h3>QHSE Analyst</h3>
+          <p>
+            <img class="icon" src="images/calendar-solid.svg" />Jan 2008 - Feb
+            2011
+          </p>
+          <p>
+            <img class="icon" src="images/location-dot-solid.svg" />Neuquen -
+            Chubut, Argentina
+          </p>
+        </div>
+
+        <div class="skill-row">
+          <a href="https://www.andradegutierrez.com.br/" target="_blank"
+            ><img class="logo" src="images/ag.svg" />Andrade Gutierrez</a
+          >
+          <h3>Safety Coordinator</h3>
+          <p>
+            <img class="icon" src="images/calendar-solid.svg" />May 2011 - Mar
+            2012
+          </p>
+          <p>
+            <img class="icon" src="images/location-dot-solid.svg" />Buenos
+            Aires, Argentina
+          </p>
+        </div>
+
+        <div class="skill-row">
+          <a href="https://tecna.business.site/" target="_blank"
+            ><img class="logo" src="images/tecna.png" />Tecna</a
+          >
+          <h3>Safety Coordinator</h3>
+          <p>
+            <img class="icon" src="images/calendar-solid.svg" />Oct 2013 - Jul
+            2017
+          </p>
+          <p>
+            <img class="icon" src="images/location-dot-solid.svg" />Tierra del
+            Fuego - Buenos Aires - Neuquen, Argentina
+          </p>
+        </div>
+
         <div class="skill-row">
           <a href="https://www.technipfmc.com/" target="_blank"
             ><img class="oil" src="images/fmc.svg" />TechnipFMC</a
@@ -94,76 +140,30 @@
             Argentina
           </p>
         </div>
-        <div class="skill-row">
-          <a href="https://tecna.business.site/" target="_blank"
-            ><img class="logo" src="images/tecna.png" />Tecna</a
-          >
-          <h3>Safety Coordinator</h3>
 
+        <div class="skill-row">
+          <a href="https://www.halliburton.com/" target="_blank"
+            ><img class="oil" src="images/halliburton-logo.svg" />Halliburton</a
+          >
+          <h3>HSE Technical Professional</h3>
           <p>
-            <img class="icon" src="images/calendar-solid.svg" />Oct 2013 - Jul
-            2017
+            <img class="icon" src="images/calendar-solid.svg" />Oct 2019 - Oct
+            2020
           </p>
           <p>
-            <img class="icon" src="images/location-dot-solid.svg" />Tierra del
-            Fuego - Buenos Aires - Neuquen, Argentina
+            <img class="icon" src="images/location-dot-solid.svg" />Neuquen,
+            Argentina
           </p>
         </div>
-        <div class="skill-row">
-          <a href="https://www.andradegutierrez.com.br/" target="_blank"
-            ><img class="logo" src="images/ag.svg" />Andrade Gutierrez</a
-          >
 
-          <h3>Safety Coordinator</h3>
-
-          <p>
-            <img class="icon" src="images/calendar-solid.svg" />May 2011 - Mar
-            2012
-          </p>
-          <p>
-            <img class="icon" src="images/location-dot-solid.svg" />Buenos
-            Aires, Argentina
-          </p>
-        </div>
-        <div class="skill-row">
-          <a href="https://www.championx.com/" target="_blank"
-            ><img class="oil" src="images/champion.png" />Champion
-            Technologies</a
-          >
-
-          <h3>QHSE Analyst</h3>
-
-          <p>
-            <img class="icon" src="images/calendar-solid.svg" />Jan 2008 - Feb
-            2011
-          </p>
-          <p>
-            <img class="icon" src="images/location-dot-solid.svg" />Neuquen -
-            Chubut, Argentina
-          </p>
-        </div>
-        <div class="skill-row">
-          <a href="https://www.skanska.com/" target="_blank"
-            ><img class="logo" src="images/skanska.svg" />Skanska</a
-          >
-
-          <h3>Safery Supervisor</h3>
-          <p>
-            <img class="icon" src="images/calendar-solid.svg" />Oct 2005 - May
-            2007
-          </p>
-          <p>
-            <img class="icon" src="images/location-dot-solid.svg" />Neuquen -
-            Rio Negro - La Pampa, Argentina
-          </p>
-        </div>
         <h2>Main tasks and responsabilities from these jobs.</h2>
-        <div class="skill-row">
+        <div class="skill-row" id="tasks">
           <ul>
             <li>
               Audit, control and maintenance of Management Systems based on ISO
               standarts.
             </li>
+            <li>HSE representative before clients and third parties</li>
             <li>Coordination of HSE teams.</li>
             <li>Training in HSE topics.</li>
             <li>HSE inspections in offices, shops, fields, building sites.</li>
