Add content to developer.html

--- a/hse.html
+++ b/hse.html
@@ -39,7 +39,7 @@
     <div class="middle-container">
       <div class="profile">
         <img src="images/angela.png" alt="profile picture" />
-        <h2>Hello.</h2>
+        <h2>Hi again.</h2>
         <p class="bio">
           I got my first job as a safety professional back in 2005, it was a
           role as a technician in a small building site for an small company.
