Add favicons to each page and change background images of index and human.html

--- a/developer.html
+++ b/developer.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/styles.css" />
-    <link rel="icon" href="images/favicon.ico" />
+    <link rel="icon" href="images/dev.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -270,8 +270,8 @@
         <h2>Get In Touch</h2>
         <h3>I can help.</h3>
         <p id="contact-message">
-          If you like we can meet sometime and I can give you more details about
-          these projects and others which I am working on.
+          If you like we can meet sometime and I can give you some more details
+          about these projects and others which I am currently working on.
         </p>
 
         <a id="btn" href="mailto:pinoen@yahoo.com.ar">CONTACT ME</a>
