--- a/hse.html
+++ b/hse.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/styles.css" />
-    <link rel="icon" href="images/favicon.ico" />
+    <link rel="icon" href="images/helmet.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -178,11 +178,11 @@
 
       <div id="contact-me">
         <h2>Get In Touch</h2>
-        <h3>Lorem ipsum dolor sit amet, non elit.</h3>
+        <h3>I can help.</h3>
         <p id="contact-message">
-          Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales,
-          tellus donec dui, ornare erat. Lorem ipsum dolor sit amet, in quis,
-          aenean amet. Phasellus sodales, tellus donec dui, ornare erat.
+          If you need more information regarding these work experiencies we can
+          talk. I can tell you about some more valuable skills I got from there
+          and the links between both roles, safety representative and developer.
         </p>
 
         <a id="btn" href="mailto:pinoen@yahoo.com.ar">CONTACT ME</a>
