--- a/human.html
+++ b/human.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/styles.css" />
-    <link rel="icon" href="images/favicon.ico" />
+    <link rel="icon" href="images/human.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -26,14 +26,12 @@
       </ul>
     </nav>
     <div class="top-container">
-      <img src="images/cloud.png" id="top-cloud" alt="cloud image" />
       <h1>I'm Emilio,</h1>
       <h2>
         and this is what I am as a
         <span id="pro">human</span> being.
       </h2>
-      <img src="images/cloud.png" id="bottom-cloud" alt="cloud image" />
-      <img src="images/mountain.png" alt="mountain image" />
+      <img id="env" src="images/undraw_environment_iaus.svg" alt="environment image" />
     </div>
 
     <div class="middle-container">
@@ -121,11 +119,9 @@
 
       <div id="contact-me">
         <h2>Get In Touch</h2>
-        <h3>Lorem ipsum dolor sit amet, non elit.</h3>
+        <h3>I'm ready to help!</h3>
         <p id="contact-message">
-          Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales,
-          tellus donec dui, ornare erat. Lorem ipsum dolor sit amet, in quis,
-          aenean amet. Phasellus sodales, tellus donec dui, ornare erat.
+          I would like to expand on these topics. I am sure all of us have  same thoughts on certain issues regarding our environment and on the importance of balance in our lives for better performance in all areas. 
         </p>
 
         <a id="btn" href="mailto:pinoen@yahoo.com.ar">CONTACT ME</a>
