--- a/index.html
+++ b/index.html
@@ -26,14 +26,12 @@
       </ul>
     </nav>
     <div class="top-container">
-      <img src="images/cloud.png" id="top-cloud" alt="cloud image" />
       <h1>I'm Emilio.</h1>
       <h2>
         A Health, Safety and Environment Specialist converted into a
         <span id="pro">pro</span>grammer.
       </h2>
-      <img src="images/cloud.png" id="bottom-cloud" alt="cloud image" />
-      <img src="images/mountain.png" alt="mountain image" />
+      <img src="images/Hands - Lightbulb.png" alt="light image" />
     </div>
 
     <div class="middle-container">
@@ -95,11 +93,11 @@
 
       <div id="contact-me">
         <h2>Get In Touch</h2>
-        <h3>Lorem ipsum dolor sit amet, non elit.</h3>
+        <h3>I can help.</h3>
         <p id="contact-message">
-          Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales,
-          tellus donec dui, ornare erat. Lorem ipsum dolor sit amet, in quis,
-          aenean amet. Phasellus sodales, tellus donec dui, ornare erat.
+          A good deal of what I have to say about me is on the pages which you
+          can access from the nav bar. For futher information on any matter,
+          please feel free to contact me.
         </p>
 
         <a id="btn" href="mailto:pinoen@yahoo.com.ar">CONTACT ME</a>
