Add specific images in each page

--- a/developer.html
+++ b/developer.html
@@ -36,7 +36,7 @@
 
     <div class="middle-container">
       <div class="profile">
-        <img src="images/angela.png" alt="profile picture" />
+        <img id="profile" src="images/emilio.png" alt="profile picture" />
         <h2>Hi again.</h2>
         <p class="bio">
           In september 2021 I started to learn from a course on the online
@@ -86,7 +86,7 @@
             >One - Oracle Next Education Program</a
           >
           which focuses on Java and provide tools for entrepreneurship. In
-          pararell to this last one, in May 2022 I am going to start studying a
+          parallel to this last one, in May 2022 I am going to start studying a
           career named
           <a
             href="https://www.digitalhouse.com/ar/productos/programacion/certified-tech-developer"
