--- a/hse.html
+++ b/hse.html
@@ -38,7 +38,11 @@
 
     <div class="middle-container">
       <div class="profile">
-        <img src="images/angela.png" alt="profile picture" />
+        <img
+          id="other-pic"
+          src="images/hse-picture.png"
+          alt="profile picture"
+        />
         <h2>Hi again.</h2>
         <p class="bio">
           I got my first job as a safety professional back in 2005, it was a
@@ -46,16 +50,17 @@
           After that I entered in corporations in the construction industry
           working for the energy industry in projects such as gas and oil
           facilities, oil and gas treatment, refinaries, ports, etc. At first my
-          responsabilities were mainly the supervision on site of any kind of
-          tasks that can be encountered in a building location: excavations,
-          lifting of heavy equipment, welding and grinding, works at height,
-          works an confine spaces, driving management, electrical jobs, job with
-          radioactive sources, painting, between a lot other.
+          responsabilities were mainly the safety supervision on site of any
+          kind of tasks that can be encountered in a industrial building
+          location: excavations, lifting of heavy equipment, welding and
+          grinding, works at height, works in confine spaces, driving
+          management, electrical jobs, job with radioactive sources, painting,
+          between a lot others.
         </p>
         <p class="bio">
           As a got more experience I had some other roles related with the
           administration of Management Systems based on ISO standarts which
-          imply taks like audits, programs to be follow, training, meet legal
+          imply tasks like audits, programs to be follow, training, meet legal
           requerements, clients satisfaction and all sort of metrics in order to
           make sure we were doing well in accordance with predefined goals.
         </p>
@@ -163,7 +168,7 @@
               Audit, control and maintenance of Management Systems based on ISO
               standarts.
             </li>
-            <li>HSE representative before clients and third parties</li>
+            <li>HSE representative before clients and third parties.</li>
             <li>Coordination of HSE teams.</li>
             <li>Training in HSE topics.</li>
             <li>HSE inspections in offices, shops, fields, building sites.</li>
