--- a/human.html
+++ b/human.html
@@ -36,8 +36,8 @@
 
     <div class="middle-container">
       <div class="profile">
-        <img src="images/angela.png" alt="profile picture" />
-        <h2>Hello.</h2>
+        <img id="other-pic" src="images/emilio-human.png" alt="profile picture" />
+        <h2>Hi there.</h2>
         <p class="bio">
           I consider myself I restless person, always looking for something new
           to learn and new paths to improve what have been done. If I am not
@@ -46,7 +46,7 @@
           reachable do it myself. I am kind of adventurous, I love travel,
           walking in unknown streets, betweeen unknown people, if the language
           is also unknown, the better the whole experience is. In fact one of
-          the thing that more catch my attention and make me motivated about the
+          the thing that more got my attention and make me motivated about the
           tech world is the possibilitty of sometime work remotively and doing
           so work from whatever place I prefer to. I am pretty sure that
           travelling around expand the mind and enrich the life.
@@ -66,21 +66,23 @@
         <div class="skill-row">
           <h3>Travel through Argentina</h3>
           <p>
-            <img class="icon" src="images/location-dot-solid.svg" />Together
+            <img class="human-img" src="images/human/undraw_navigator_a479.svg" />Together
             with my partner travel for about 1 year in Argentina, getting to
             know our beatiful provincies of Chubut, San Luis, Cordoba, Entre
             Rios, Misiones, Corrientes, Salta, Jujuy, Tucuman, Santiago del
-            Estego and dozen of cities and cozy towns. Though my life and in
+            Estego and dozen of cities and cozy towns. Through my life and in
             some cases because of my work I have the opportunitty of know almost
             the whole country, including Tierra del Fuego, Santa Cruz, Rio
             Negro, Neuquen, Mendoza, Buenos Aires, La Pampa.
+
           </p>
         </div>
 
         <div class="skill-row">
           <h3>Travel through Australia and Southeast Asia</h3>
           <p>
-            <img class="icon" src="images/location-dot-solid.svg" />For 1 year I
+            <img class="human-img" src="images/human/undraw_connected_world_wuay.svg" />
+            For 1 year I
             travel, work (as a cleaner of luxury boats), learn English an enjoy
             a lot living in Australia and travelling to Singapore, Malasya,
             Thailand and Camboya.
@@ -90,8 +92,8 @@
         <div class="skill-row">
           <h3>Sudamerica</h3>
           <p>
-            <img class="icon" src="images/location-dot-solid.svg" />I have gone
-            a couple of times to Peru (from south to north), Ecuador, Uruguay
+            <img class="human-img" src="images/human/undraw_aircraft_fbvl.svg" />I have gone
+            a couple of times to Peru (from south to north), Ecuador, Uruguay, Paraguay,
             and Chile. And for working reasons I know a little bit of Brazil and
             Colombia.
           </p>
@@ -100,14 +102,14 @@
         <div class="skill-row">
           <h3>Ecology and sustainable development</h3>
           <p>
-            <img class="icon" src="images/location-dot-solid.svg" />I have taken
+            <img class="human-img" src="images/human/Olá - Gardening Together.png" />I have taken
             several courses with a lot of practice along them in topics such as
             agroecology, bioconstruction, permaculture, medicinal herbs. All
-            these subject pretend sustainable ways of produce food, build houses
+            these subject encourage sustainable ways of produce food, build houses
             and treat certain diseases, mitigating the impact on our planet and
             on our health. On those occasion I got my hand on duty, sowing and
-            reaping variaty of fruit and vegetables, building houses using
-            natural material, or harvasting herbs for selective teas. Most of
+            reaping variaty of fruits and vegetables, building houses using
+            natural materials, or harvasting herbs for selective teas. Most of
             these experiencies were as a volunteer, exchanging my time for
             something to eat and a place to sleep. In return I got invaluable
             knowlegde from real masters and unforgettable moments sharing time
@@ -121,7 +123,7 @@
         <h2>Get In Touch</h2>
         <h3>I'm ready to help!</h3>
         <p id="contact-message">
-          I would like to expand on these topics. I am sure all of us have  same thoughts on certain issues regarding our environment and on the importance of balance in our lives for better performance in all areas. 
+          I would like to expand on these topics. I am sure all of us have same thoughts on certain issues regarding our environment and on the importance of balance in our lives for better performance in all areas. 
         </p>
 
         <a id="btn" href="mailto:pinoen@yahoo.com.ar">CONTACT ME</a>
