--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <div class="middle-container">
       <div class="profile">
-        <img src="images/angela.png" alt="profile picture" />
+        <img id="profile" src="images/avatar2.png" alt="profile picture" />
         <h2>Hello.</h2>
         <p class="bio">
           Since 2005 I have been working as a Safety Supervisor in the Energy,
@@ -51,8 +51,8 @@
           technology in general, however I have not had the opportunitty to
           study and make a living from that. Now I got that opportunitty and I
           am confident enough to excel in this field. I consider myself a
-          long-term student, fast learner, goal oriented in results, quickly
-          adaptable in changing environments, responsable and friendly.
+          long-term student, fast learner, goal oriented, quickly adaptable in
+          changing environments, responsable and friendly.
         </p>
       </div>
       <hr />
@@ -76,7 +76,6 @@
           </p>
         </div>
         <div class="skill-row">
-          <img class="" src="images/computer.png" alt="" />
           <h3>Technical Master Builder</h3>
           <p>Provincial School of Technical Education</p>
           <p>
