--- a/hse.html
+++ b/hse.html
@@ -51,7 +51,7 @@
           working for the energy industry in projects such as gas and oil
           facilities, oil and gas treatment, refinaries, ports, etc. At first my
           responsabilities were mainly the safety supervision on site of any
-          kind of tasks that can be encountered in a industrial building
+          kind of tasks that can be encountered in an industrial building
           location: excavations, lifting of heavy equipment, welding and
           grinding, works at height, works in confine spaces, driving
           management, electrical jobs, job with radioactive sources, painting,
